Fix overflow in carousel and make style more uniform

--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ section#home-reviews p {
   color: #c1a57b;
 }
 .carousel-item {
-  height: 30vh;
+  height: 34vh;
 }
 
 /* END CAROUSEL */
